# terraneo

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: doxygen.yml
apps/: CMakeLists.txt
apps/mantlecirculation/: mantlecirculation.cpp
apps/tools/: CMakeLists.txt  read_checkpoint.cpp
benchmarks/: CMakeLists.txt  benchmark_baseline.cpp
benchmarks/performance/: CMakeLists.txt  benchmark_baseline.cpp  benchmark_operators.cpp
doc/: README.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_arg_parser.cpp  test_basis_trafo_normal_tangential.cpp  test_boundary_mass.cpp  test_debug_assembly.cpp  test_div_k_grad_cg.cpp  test_div_k_grad_multigrid_gca.cpp  test_epsilon_cg.cpp  test_epsilon_divdiv_cg.cpp  test_epsilon_divdiv_stokes.cpp  test_epsilon_divdiv_stokes_minres.cpp  test_flag_field_unique_vertices.cpp  test_heat_eq.cpp  test_interpolate.cpp  test_kokkos_smoke.cpp  test_laplace.cpp  test_laplace_bicgstab.cpp  test_laplace_cg.cpp  test_laplace_cg_subdomains.cpp  test_laplace_compare.cpp  test_laplace_fgmres.cpp  test_laplace_jacobi.cpp  test_laplace_minres.cpp  test_laplace_multigrid.cpp  test_laplace_multigrid_gca.cpp  test_laplace_pbicgstab_multigrid.cpp  test_laplace_richardson.cpp  test_mesh.cpp  test_mpi_smoke.cpp  test_prolongation.cpp  test_prolongation_constant.cpp  test_prolongation_linear.cpp  test_radial_profiles.cpp  test_restriction.cpp  test_stokes_minres.cpp  test_stokes_pbicgstab_multigrid.cpp  test_table.cpp  test_unsteady_advection_diffusion_supg.cpp  test_vector_laplace_cg.cpp  test_vector_laplace_compare.cpp  (+2 more)
(+121 files in other folders)
